# sumologic-simple

./: pyproject.toml  sumo_simple.py
sumo_simple/: __init__.py
