[tool.poetry]
name = "sumologic-simple"
version = "0.1.0"
description = ""
authors = ["Jarrad Whitaker <JWhitaker@officeworks.com.au>"]
packages = [
    { include = "sumo_simple.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
sumologic-sdk = "^0.1.8"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
